samples/_failures_safe/1761605452_b8febf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f0aa5466.c: In function ‘main’:
./samples/SAFE/__tmp_f0aa5466.c:169:9: error: expected expression at end of input
  169 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_f0aa5466.c:169:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f0aa5466.c:169:9: error: expected declaration or statement at end of input
